--- a/corey_oop2.ipynb
+++ b/corey_oop2.ipynb
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "# Elas são bastante úteis no caso de operações padronizadas com base em um valor fixo\n",
+    "# Elas são bastante úteis no caso de operações padronizadas com base em um valor fixo.\n",
     "# Digamos que temos um investimento cujo rendimento anual é de 4%.\n",
     "# Poderíamos criar uma classe para esse investimento, tendo como variável global a sua taxa de juros fixa.\n",
     "\n",
@@ -75,7 +75,7 @@
    "id": "45a15cd7-9cad-4657-99d9-8c06accec056",
    "metadata": {},
    "source": [
-    "* <p style = 'font-size:20px'> Por outro lado, podemos nos referir ao atributo de classe como <em> self.nome_atributo_de_classe. </em> </p>"
+    "* <p style = 'font-size:20px'> Por outro lado, podemos nos referir à variável de classe como <em> self.nome_variavel_de_classe. </em> </p>"
    ]
   },
   {
