--- a/corey_oop4.ipynb
+++ b/corey_oop4.ipynb
@@ -177,9 +177,9 @@
     "        # algo mais conciso do que isso. Nessa ocasião, podemos utilizar o método super()\n",
     "        \n",
     "        # super() invocará o __init__ da classe mãe, instanciando todos os atributos que pertencem tanto a ela\n",
-    "        # quanto à classe-filha\n",
+    "        # quanto à classe-filha.\n",
     "        super().__init__(nome, salario)\n",
-    "        # Nesse sentido, precisamos apenas informar o atributo ling_prog\n",
+    "        # Nesse sentido, precisamos apenas informar o atributo ling_prog (atributo que não pertence à classe-mãe)\n",
     "        self.ling_prog = ling_prog\n",
     "        \n",
     "    \n",
@@ -193,11 +193,124 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "72459c3e-f978-4d42-ac32-4ec2eba36202",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felipe Veiga\n",
+      "Eduardo Veiga\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Vamos criar uma subclasse \"Gerente\"\n",
+    "# Vamos aproveitá-la e criar alguns métodos exclusivos a ela.\n",
+    "class Empregado:\n",
+    "    \n",
+    "    aumento = 1.05\n",
+    "    @staticmethod\n",
+    "    def _break_name(nome):\n",
+    "        primeiro_nome, sobrenome = nome.split(' ')\n",
+    "        return str.casefold(primeiro_nome), str.casefold(sobrenome)\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def _create_email(nome):\n",
+    "        primeiro_nome, sobrenome = Empregado._break_name(nome)\n",
+    "        return f'{primeiro_nome}.{sobrenome}@company.com'\n",
+    "    \n",
+    "    def __init__(self, nome, salario):\n",
+    "        self.nome = nome\n",
+    "        self.email = Empregado._create_email(nome)\n",
+    "        self.salario = float(salario)\n",
+    "        \n",
+    "    def aumentar_salario(self):\n",
+    "        self.salario *= self.aumento\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def fromstring(cls, string):\n",
+    "        nome, salario = string.split('-')\n",
+    "        return cls(nome, salario)\n",
+    "\n",
+    "\n",
+    "\n",
+    "class Desenvolvedor(Empregado):\n",
+    "    aumento = 1.1\n",
+    "    \n",
+    "    def __init__(self, nome, salario, ling_prog):        \n",
+    "        super().__init__(nome, salario)\n",
+    "        self.ling_prog = ling_prog\n",
+    "\n",
+    "# Por se encontrarem dentro de \"Gerente\", esses métodos não poderão ser utilizados pelas demais classes criadas.\n",
+    "class Gerente(Empregado):\n",
+    "    def __init__(self, nome, salario, area, subordinados = None):\n",
+    "        super().__init__(nome, salario)\n",
+    "        self.area = area\n",
+    "        if subordinados is None:\n",
+    "            self.subordinados = []\n",
+    "        else:\n",
+    "            self.subordinados = subordinados\n",
+    "            \n",
+    "    def adicionar_subordinado(self, subordinado):\n",
+    "        if subordinado not in self.subordinados:\n",
+    "            self.subordinados.append(subordinado)\n",
+    "        else:\n",
+    "            raise ValueError('O subordinado já está listado!')\n",
+    "    \n",
+    "    def remover_subordinado(self, subordinado):\n",
+    "        if subordinado in self.subordinados:\n",
+    "            self.subordinados.remove(subordinado)\n",
+    "    \n",
+    "    def mostrar_subordinados(self):\n",
+    "        for subordinado in self.subordinados:\n",
+    "            print(subordinado.nome)\n",
+    "        \n",
+    "Felipe = Desenvolvedor('Felipe Veiga', 50000, 'Python')\n",
+    "Eduardo = Empregado('Eduardo Veiga', 30000)\n",
+    "Roberto = Gerente('Roberto Veiga', 50000, 'Banco de Dados')\n",
+    "Roberto.adicionar_subordinado(Felipe)\n",
+    "Roberto.adicionar_subordinado(Eduardo)\n",
+    "\n",
+    "Roberto.mostrar_subordinados()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "a7d9abd0-43b5-4bca-b60a-89b98ca28831",
+   "id": "27152408-0593-4706-a804-db00a8f8bec5",
    "metadata": {},
    "source": [
-    "<p style = 'font-size:50px;color:orange'>Parei em 9:15 da mesma aula.</p>"
+    "<p style = 'font-size:30px'> <em> isinstance, issubclass</em> </p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "319d893e-62b4-42ba-b311-cc0fe8821455",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# isinstance identifica se um determinado parâmetro consiste em uma instância da classe informada.\n",
+    "print(isinstance(Felipe, Desenvolvedor))\n",
+    "\n",
+    "# 'Felipe' é tido também como uma instância da classe-mãe 'Empregado'\n",
+    "print(isinstance(Felipe, Empregado))\n",
+    "\n",
+    "# issubclass verifica se uma classe é subclasse de uma outra\n",
+    "print(issubclass(Desenvolvedor, Empregado))"
    ]
   }
  ],
